--- a/Praktikum5/pom.xml
+++ b/Praktikum5/pom.xml
@@ -29,11 +29,18 @@
       </plugin>
     </plugins>
   </build>
+  <reporting>
+        <plugins>
+        <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        </plugin>
+      </plugins>
+  </reporting>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
